[package]
name = "gemuizu_fetch"
version = "0.2.0"
edition = "2021"
authors = ["Daya Adianto <addianto@users.noreply.github.com>"]
description = "An unofficial GameWith page fetcher"
repository = "https://github.com/addianto/gemuizu-fetch"
readme = "README.md"
license = "MIT"
publish = false

# TODO Complete the following package metadata:
# keywords = [ ... ]
# categories = [ ... ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ureq = "2.9.6"
clap = { version = "4.5.4", features = ["cargo"] }
scraper = "0.19.0"
assert_cmd = "2.0.14"
predicates = "3.1.0"
